Switched from draftId to storyId.
