# src/api/publishingController.js
@@ -4,20 +4,20 @@ const publishingModel = require('../db/publishingModel')
 
 exports.getEditions = async (req, res) => {
   const { playerId } = req.user
-  const { draftId } = req.params
-  console.log('publishingController.getEditions', draftId)
+  const { storyId } = req.params
+  console.log('publishingController.getEditions', storyId)
   try {
-    if (!hasStoryAuthorAccess(playerId, draftId, res)) {
+    if (!hasStoryAuthorAccess(playerId, storyId, res)) {
       return
     }
-    const editions = await publishingModel.getEditions(draftId)
+    const editions = await publishingModel.getEditions(storyId)
     if (!editions) {
       res.status(404).send()
       return
     }
     res.status(200).json(editions)
   } catch (e) {
-    console.error('Problem finding editions for story', draftId, e)
+    console.error('Problem finding editions for story', storyId, e)
     res.status(500).json(internalError)
   }
 }
@@ -29,13 +29,13 @@ exports.getEditions = async (req, res) => {
  */
 exports.createEdition = async (req, res) => {
   const { playerId } = req.user
-  const { draftId } = req.params
-  console.log('publishingController.createEdition', draftId)
+  const { storyId } = req.params
+  console.log('publishingController.createEdition', storyId)
   try {
-    if (!hasStoryAuthorAccess(playerId, draftId, res)) {
+    if (!hasStoryAuthorAccess(playerId, storyId, res)) {
       return
     }
-    const unpublishedVersion = await publishingModel.findUnpublishedVersion(draftId)
+    const unpublishedVersion = await publishingModel.findUnpublishedVersion(storyId)
     if (unpublishedVersion) {
       console.log('proof already started; do nothing')
       res.status(304).end()
@@ -44,12 +44,12 @@ exports.createEdition = async (req, res) => {
 
     // version numbering -- find the latest published and increment
     let nextVersion = 1
-    const latestVersion = await publishingModel.getLatestPublishedVersion(draftId)
+    const latestVersion = await publishingModel.getLatestPublishedVersion(storyId)
     if (latestVersion) {
       nextVersion = parseInt(latestVersion)
       nextVersion++
     }
-    const edition = await publishingModel.createNewEdition(draftId, nextVersion.toString())
+    const edition = await publishingModel.createNewEdition(storyId, nextVersion.toString())
     res.status(201).json(edition)
   } catch (e) {
     console.error('Problem creating new edition', e)
@@ -59,13 +59,13 @@ exports.createEdition = async (req, res) => {
 
 exports.getEdition = async (req, res) => {
   const { playerId } = req.user
-  const { draftId, version } = req.params
-  console.log('publishingController.getEdition', draftId, version)
+  const { storyId, version } = req.params
+  console.log('publishingController.getEdition', storyId, version)
   try {
-    if (!hasStoryAuthorAccess(playerId, draftId, res)) {
+    if (!hasStoryAuthorAccess(playerId, storyId, res)) {
       return
     }
-    const edition = await publishingModel.getEdition(draftId, version)
+    const edition = await publishingModel.getEdition(storyId, version)
     if (!edition) {
       res.status(404).send()
       return
@@ -79,16 +79,16 @@ exports.getEdition = async (req, res) => {
 
 exports.updateEdition = async (req, res) => {
   const { playerId } = req.user
-  const { draftId, version } = req.params
+  const { storyId, version } = req.params
   const editionUpdate = req.body
-  console.log('publishingController.updateEdition', draftId, version, editionUpdate)
+  console.log('publishingController.updateEdition', storyId, version, editionUpdate)
   try {
-    if (!hasStoryAuthorAccess(playerId, draftId, res)) {
+    if (!hasStoryAuthorAccess(playerId, storyId, res)) {
       return
     }
-    await publishingModel.updateEdition(draftId, version, editionUpdate)
+    await publishingModel.updateEdition(storyId, version, editionUpdate)
     await takeNap(200)  // poor man's way to avoid async problems
-    const updatedEdition = await publishingModel.getEdition(draftId, version)
+    const updatedEdition = await publishingModel.getEdition(storyId, version)
     res.status(202).json(updatedEdition)
   } catch (e) {
     console.error('Problem updating edition', e)
@@ -98,14 +98,14 @@ exports.updateEdition = async (req, res) => {
 
 exports.publish = async (req, res) => {
   const { playerId } = req.user
-  const { draftId, version } = req.params
-  console.log('publishingController.publish', draftId, version)
+  const { storyId, version } = req.params
+  console.log('publishingController.publish', storyId, version)
   const start = new Date()
   try {
-    if (!hasStoryAuthorAccess(playerId, draftId, res)) {
+    if (!hasStoryAuthorAccess(playerId, storyId, res)) {
       return
     }
-    let edition = await publishingModel.getEdition(draftId, version)
+    let edition = await publishingModel.getEdition(storyId, version)
 
     // drop out if already published
     if (edition.publishedAt) {
@@ -118,12 +118,12 @@ exports.publish = async (req, res) => {
     // don't optimize yet; gather some timing metrics for now
 
     // build and save story JSON
-    const fullStory = await assembleFullStory(draftId)
-    await publishingModel.finishPublishing(draftId, version, fullStory)
-    edition = await publishingModel.getEdition(draftId, version)
+    const fullStory = await assembleFullStory(storyId)
+    await publishingModel.finishPublishing(storyId, version, fullStory)
+    edition = await publishingModel.getEdition(storyId, version)
     res.status(201).json(edition)
     const elapsed = new Date().getTime() - start.getTime()
-    console.log('published in ', elapsed, 'ms', draftId, version)
+    console.log('published in ', elapsed, 'ms', storyId, version)
   } catch (e) {
     console.error('Problem publishing', e)
     res.status(500).json(internalError)
